@@ -1,445 +1,569 @@
-# Ragnarok Core - Hexagonal Architecture Refactoring
+# Ragnarok Core — Hexagonal Architecture
 
-Este projeto é o núcleo (Core) de um sistema de emulação e gerenciamento de dados baseado no jogo Ragnarok Online. O projeto está passando por uma refatoração profunda para **Arquitetura Hexagonal (Ports and Adapters)**, visando desacoplar as regras de negócio (Domínio) de frameworks externos, banco de dados e APIs. Toda a base de dados do jogo (monstros, itens, mapas, warps, drops) é importada diretamente do servidor oficial **rAthena** (`db/re/` — versão Renewal).
+![CI](https://github.com/SilvioPLopes/ragnarok-core/actions/workflows/ci.yml/badge.svg)
+![Coverage](https://img.shields.io/badge/coverage-85%25%2B-brightgreen)
+![Tests](https://img.shields.io/badge/tests-240%20passing-brightgreen)
 
----
-
-## ✅ Status do Projeto
-
-- **Arquitetura:** Hexagonal (Domain, Application, Infrastructure).
-- **Dados do jogo:** Importados do rAthena `db/re/` — 2675 monstros, todos os itens, 1864 warps, 2374 spawns, 12544 drops.
-- **Navegação:** Player se move entre mapas reais usando portais do rAthena.
-- **Engine de Batalha:** Cálculo de dano físico (Status + Equipamentos + Defesa), counter-ataque do monstro e Lógica de Turnos.
-- **Sistema de Loot:** Drop de itens baseado em taxas reais do rAthena (RNG 1-10000) persistido no inventário.
-- **Sistema de Nível:** Gestão de Experiência (Base/Job), Level Up automático e pontos de atributos.
-- **Distribuição de Stats:** Menu terminal para gastar `statPoints` nos atributos (STR/AGI/VIT/INT/DEX/LUK).
-- **Sistema de Skills:** Catálogo de skills por classe (`skill_tree`), prerequisites AND-logic, aprendizado com `skillPoints`, menu terminal acessível via `S` no status.
-- **Sistema de Troca de Classe:** Progressão NOVICE→Tier1→Tier2 com validação de job level, menu via `C` no status.
-- **Startup Automático:** `StartupDataLoader` popula todas as tabelas estáticas no boot — sem scripts manuais.
-- **Testes:** Testes de integração cobrindo o ciclo "Atacar -> Matar -> Dropar -> Upar", skills e troca de classe.
+The core engine of a Ragnarok Online emulation and data-management system built on **Hexagonal Architecture (Ports and Adapters)**. All game data (monsters, items, maps, warps, drops, skills) is imported directly from the official **rAthena** server (`db/re/` — Renewal version).
 
 ---
 
-## 🏗 Arquitetura e Organização
+## Project Status
 
-O projeto segue estritamente a separação de responsabilidades definida pela arquitetura hexagonal:
+| System | Status | Details |
+|---|---|---|
+| Hexagonal Architecture | Operational | Domain / Application / Infrastructure / Runner |
+| rAthena Data | Operational | 2675 monsters, all items, 1864 warps, 2374 spawns, 12544 drops |
+| Map Navigation | Operational | Real rAthena portals, weighted monster encounters by `amount` |
+| Battle Engine | Operational | Physical damage, monster counter-attack, elemental and size modifiers |
+| Loot System | Operational | Real rAthena drop rates (0–100%), RNG, inventory persistence |
+| Leveling System | Operational | Base/Job XP, auto Level Up, Full Heal, stat/skill points |
+| Stat Distribution | Operational | Terminal menu for spending `statPoints` (STR/AGI/VIT/INT/DEX/LUK) |
+| Skill System | Operational | Full tree, AND-logic prerequisites, learning with `skillPoints` |
+| Class Chain | Operational | Skills from ALL previous classes visible and learnable |
+| Skill Effects | Operational | Buffs, passives, formula-based damage, SP cost, duration in turns |
+| Size Modifiers | Operational | Weapon vs. Small/Medium/Large with real game table |
+| Class Change | Operational | NOVICE → Tier1 → Tier2 → Tier3 with job level validation |
+| Auto Startup | Operational | `StartupDataLoader` populates all static tables on boot |
+| Schema Management | Operational | Flyway V1 migration; Hibernate validates on startup |
+| Resilience4j | Operational | `@Retry` (3 attempts, 2 s exponential backoff) + `@CircuitBreaker` on rAthena download |
+| Spring Cache (Caffeine) | Operational | `weaponSizeModifiers`, `skillBuffEffects`, `skillTree`, `playerSkills` — zero repeated queries in battle |
+| REST API + Swagger UI | Operational | Full game loop via browser: Players, Battle, Skills, Inventory, Map — `GET /swagger-ui.html` |
+| Spring Events | Operational | `BattleService` publishes `MonsterKilledEvent` / `PlayerDiedEvent`; `BattleEventHandler` handles loot, XP, resurrection |
+| Testcontainers | Operational | All integration tests use an ephemeral PostgreSQL container — no local DB required for `./mvnw test` |
+| Test Coverage | **240 tests** | Unit + Integration — zero failures (JaCoCo ≥ 85% line / ≥ 62% branch) |
+
+---
+
+## Architecture & Organization
+
+The project strictly follows the separation of concerns of hexagonal architecture:
 
 ### 1. Domain (`com.ragnarok.domain`)
-* **O que é:** O coração do sistema. Contém a lógica de negócio e os modelos puros.
-* **Regra de Ouro:** Não deve ter dependências de Frameworks (Spring, Hibernate, Feign). Não usa anotações como `@Entity` ou `@Table`.
-* **Tipagem:** Usa tipos fortes (`Integer`, `Double`) para cálculos matemáticos.
+
+**The heart of the system.** Contains pure business logic and models.
+
+- **Golden Rule:** No framework dependencies. No `@Entity`, `@Table`, or any Spring/Hibernate annotations.
+- Uses strong types (`Integer`, `Double`) for safe mathematical calculations.
+- `BattleEngine` and `LevelingService` are pure services — testable without a database.
 
 ### 2. Application (`com.ragnarok.application`)
-* **O que é:** A camada de orquestração (Use Cases).
-* **Função:** Recebe comandos, busca dados usando as portas (Interfaces) e coordena o fluxo.
-* **Exemplos:**
-    * `MonsterCatalogService`: Coordena a busca na API e o salvamento no Banco.
-    * `PlayerService`: Gerencia a criação de personagens e regras iniciais.
-    * `BattleService`: Gerencia o ciclo de combate, morte e recompensas.
-    * `SkillService`: Lista skills disponíveis por classe, valida pré-requisitos e processa o aprendizado.
-    * `SkillRowDTO`: Record público com os dados de uma skill para exibição no terminal.
 
-### 3. Infrastructure (`com.ragnarok.infrastructure`)
-* **O que é:** Os adaptadores para o mundo externo.
-* **Client:** Comunicação com APIs externas (Ragnapi). Usa DTOs "sujos" (Strings) para tolerar dados mal formatados.
-* **Persistence:** Comunicação com Banco de Dados (PostgreSQL). Usa Entities com anotações JPA (`@Entity`).
-* **Mapper:** A ponte tradutora que converte DTO (Infra) -> Domain -> Entity (Infra).
+**The orchestration layer (Use Cases).** Receives commands, fetches data through ports, and coordinates flow.
 
-### 4. Runner (`com.ragnarok.runner`)
-* `RagnarokTerminalRunner` — UI do terminal, game loop de exploração e combate.
-* `RathenaImporter` — importa monstros e itens do rAthena automaticamente no startup (`@Order(1)`).
-* `MockMapLoader` — cria o player inicial (`@Order(2)`). Não cria mais mocks de monstros ou mapas.
-* `StartupDataLoader` — popula `maps`, `map_portals`, `map_monsters`, `monster_drops` e `skill_tree` a partir dos SQLs em `src/main/resources/db/` se as tabelas estiverem vazias (`@Order(3)`). **Sem scripts manuais necessários.**
+| Service | Responsibility |
+|---|---|
+| `BattleService` | Combat turn: damage, counter-attack, weapon-size modifier; publishes `MonsterKilledEvent` / `PlayerDiedEvent` |
+| `BattleEventHandler` | `@EventListener`: persists loot, processes XP via `LevelingService`, publishes `PlayerLeveledUpEvent`, resurrects player |
+| `SkillService` | Class-chain listing, prerequisite validation, and skill learning |
+| `SkillCombatService` | Skill usage in combat: HEAL, BUFF, PHYSICAL_DAMAGE, MAGICAL_DAMAGE |
+| `ClassChangeService` | Class progression with job level validation |
+| `ItemService` | Inventory management, equip/unequip, auto slot-swap |
+| `MapService` | Current map info, portal listing, walk (random encounter), and travel between maps |
+| `PlayerService` | Character creation and management |
+| `MonsterCatalogService` | Monster ETL via external API |
+| `WeaponSizeService` | Size modifier lookup by weapon type and monster size (`@Cacheable`) |
+| `ScriptInterpreter` | Formula evaluation engine (`"ATK * skill_lv * 1.3"`) |
 
-### 5. "Battle System" (Ciclo de Batalha e Recompensa)
-1. **Trigger:** `BattleService.realizarAtaque` é chamado.
-2. **Engine (Domínio):** `BattleEngine` calcula o dano físico e `LevelingService` processa a XP.
-3. **Aplicação:** Atualiza o HP do monstro e os dados do Player no banco.
-4. **Loot & XP:** Se o monstro morrer, itens são dropados e a experiência é calculada, podendo acionar o Level Up.
+### 3. REST API (`com.ragnarok.api`)
+
+Exposes the full game loop as a REST API with OpenAPI documentation via **springdoc-openapi**.
+
+| Controller | Endpoints |
+|---|---|
+| `PlayerController` | `GET /api/players`, `GET /api/players/{id}`, `POST /api/players` |
+| `BattleController` | `POST /api/battle/attack` |
+| `SkillController` | `GET /api/players/{id}/skills`, `POST .../learn`, `POST .../use` |
+| `ItemController` | `GET /api/players/{id}/inventory`, `POST .../inventory/{itemId}/use` |
+| `MapController` | `GET /api/players/{id}/map`, `GET /api/maps/{mapId}/portals`, `POST .../walk`, `POST .../travel` |
+| `GlobalExceptionHandler` | `@RestControllerAdvice`: maps domain exceptions to HTTP 400/404/500 |
+
+**Swagger UI:** `http://localhost:8080/swagger-ui.html` — interactive docs for all 5 groups without cloning the repo.
+
+### 4. Infrastructure (`com.ragnarok.infrastructure`)
+
+**Adapters to the outside world.**
+
+- **Client:** Communication with the Ragnapi API. Uses immutable DTOs (Records) with `String` fields to tolerate malformed data.
+- **Persistence:** PostgreSQL communication via JPA. Entities use `@Entity` with a Flattening strategy.
+- **Mapper:** Translator bridge. Converts `DTO → Domain → Entity`, applying sanitization and safe unboxing.
+- **`BuffSerializer`:** Serializes/deserializes the `ActiveBuff` list as JSON in the player's `active_buffs_json` column.
+
+### 5. Runner (`com.ragnarok.runner`)
+
+| Class | Order | Function |
+|---|---|---|
+| `RathenaImporter` | `@Order(1)` | Imports monsters and items from rAthena GitHub automatically on startup |
+| `PlayerSeedLoader` | `@Order(2)` | Creates the initial player |
+| `StartupDataLoader` | `@Order(3)` | Populates `maps`, `map_portals`, `map_monsters`, `monster_drops`, `skills`, `skill_tree`, `skill_buff_effects`, and `weapon_size_modifiers` from SQLs in `src/main/resources/db/` |
+| `RagnarokTerminalRunner` | — | Terminal UI, exploration and combat game loop |
 
 ---
 
-## 🗺 Sistema de Navegação
+## Data Flows
 
-O player navega pelo mundo usando dados reais de warps do rAthena.
+### 1. Monster Catalog (ETL & Data Mining)
 
-- **`map_portals`** — 1864 warps extraídos de `npc/re/warps/`
-- **`map_monsters`** — 2374 entradas de spawn extraídas de `npc/re/mobs/`
-- **Localização do player** — salva em `PlayerEntity.mapName` (ex: `"prontera"`, `"prt_fild08"`)
-- **Encontro aleatório** — monstro sorteado por peso proporcional ao `amount` do spawn
+Resilient flow that loads external data, sanitizes inconsistencies, and performs relational data mining.
+
+1. **Trigger:** `MonsterCatalogService.carregarESalvarMonstro(Long id)`
+2. **Fetch (Client):** `RagnapiClient` consumes external API — input: "dirty" JSON (`"hp": "10,000"`, `"name": "scorpion"`)
+3. **Sanitization (Mapper):** `MonsterMapper.toDomain(dto)` — removes commas, normalizes strings, ensures strong typing (`String → Integer`)
+4. **Domain:** Instantiation of pure `Monster` object for safe calculations
+5. **Persistence (Mapper):** `MonsterMapper.toEntity(domain)` applies **Flattening** (flattens nested objects into flat columns)
+6. **Automatic Mining:** Drops identified; non-existent items become placeholders. Spawns populate `maps` and `map_monsters`
+
+### 2. Character Creation (Factory & Persistence)
+
+1. **Trigger:** `PlayerService.criarNovoPersonagem(name, class)`
+2. **Domain:** Level 1, HP 100/100, location: Prontera
+3. **Mapping:** `PlayerMapper` converts `PlayerStats`, `PlayerLocation` to flat columns
+4. **Persistence:** Transactional commit to PostgreSQL
+
+### 3. Item Management (Inventory & Equipment)
+
+1. **UUID Inventory:** Each item has a unique UUID in `player_items`, supporting multiple instances of the same item
+2. **Auto-Swap:** `ItemService` identifies the `EquipSlot` of the new item, removes the equipped item in the same slot, and equips the new one in a single atomic transaction
+3. **Persisted Loot:** Drop rate (`rate`) stored at 0–100 scale (normalized from rAthena's 0–10000 scale during SQL ingestion)
+
+### 4. Battle & Progression (Engine & Leveling)
+
+1. **Trigger:** `BattleService.realizarAtaque(playerId, monsterId)`
+2. **Combat (Engine):** `BattleEngine` calculates `(STR*2 + WeaponATK) - EnemyDEF`; applies elemental and weapon-size modifier
+3. **Counter-attack:** Monster responds in the same turn with `ATK - PlayerDEF`
+4. **Loot (RNG):** On monster death, `nextDouble(0, 100) < rate` determines each drop; items saved in `player_items`
+5. **XP & Level Up:** `LevelingService` processes base/job XP, checks curve (`Level * 100`), applies Full Heal, +5 stat points, +1 skill point per level up
+
+### 5. World Navigation (Map & Portals)
+
+1. **Trigger:** Player selects "Portais" in the exploration menu
+2. **Query:** `MapPortalRepository.findDestinosByMapFrom(currentMap)` returns available destinations
+3. **Travel:** `PlayerEntity.mapName` updated and persisted
+4. **Encounter:** Monster drawn by weight proportional to `amount` in `map_monsters`
+5. **Death:** Player revives in `prontera`, `mapName` reset
+
+### 6. Skills System (Learning, Prerequisites, and Class Chain)
+
+1. **Trigger:** Status Menu → key `S`
+2. **Class Chain:** `SkillService.resolveClassChain` traverses the `parentClass` field of the `JobClass` enum and returns all classes in the progression. E.g.: `LORD_KNIGHT → [LORD_KNIGHT, KNIGHT, SWORDSMAN]`
+3. **Listing:** `listarSkillsDoPlayer` queries `skill_tree` for **the entire chain** — a LORD_KNIGHT sees and can learn `LK_*`, `KN_*`, and `SM_*` skills
+4. **AND-logic Prerequisites:** A skill with multiple rows in `skill_tree` requires **all** prerequisites satisfied
+5. **Learning:** `aprenderSkill` validates class/chain, prerequisites, max level, and `skillPoints`. Upserts in `player_skills` and decrements `skillPoints`
+6. **Immediate Passives:** When learning a `PASSIVE` skill, bonuses are applied instantly via `ActiveBuff` with `durationTurns = -1` (permanent)
+
+### 7. Skill Effects System (Buffs, Passives, and Damage)
+
+1. **Dynamic Formulas:** `ScriptInterpreter.evaluateFormula` evaluates expressions like `"ATK * skill_lv * 1.3"` or `"skill_lv * 2"` at runtime
+2. **BUFF:** When using the skill, effects are read from `skill_buff_effects`, calculated, and applied as `ActiveBuff` with duration. Response shows concrete values: `"SM_ENDURE (Lv1). Effect lasts 7 turns. [DEF +2, M_DEF +4]"`
+3. **PASSIVE:** Applied on learning. Permanent bonus stored in player's `active_buffs_json`
+4. **PHYSICAL_DAMAGE / MAGICAL_DAMAGE:** Formula evaluated with player stats; elemental and weapon-size modifiers applied
+5. **HEAL:** Formula evaluated to restore player HP
+6. **Size Modifier:** `WeaponSizeService` queries `weapon_size_modifiers` for the damage percentage by weapon × monster size (Small/Medium/Large)
+
+### 8. Spring Events — Decoupled Battle Pipeline
+
+`BattleService` publishes domain events via `ApplicationEventPublisher` instead of calling other services directly. All side-effects of combat are handled asynchronously (but synchronously in the same transaction) by `BattleEventHandler`.
 
 ```
-Exemplo prt_fild08: Poring x87, Fabre x77, Lunatic x67...
-Poring aparece com probabilidade proporcional ao seu amount.
+realizarAtaque()
+  └─ monster HP ≤ 0
+       └─ battleEngine.calculateLoot(monster)
+       └─ eventPublisher.publishEvent(MonsterKilledEvent)   ← same TX
+            └─ BattleEventHandler.onMonsterKilled()
+                 ├─ persist loot → player_items
+                 ├─ levelingService.processarExperiencia()
+                 ├─ save PlayerEntity (base/job level, XP, stat/skill points)
+                 └─ if leveled up → publishEvent(PlayerLeveledUpEvent)
+
+  └─ player HP ≤ 0
+       └─ eventPublisher.publishEvent(PlayerDiedEvent)       ← same TX
+            └─ BattleEventHandler.onPlayerDied()
+                 ├─ hpCurrent = hpMax
+                 └─ mapName = "prontera"
 ```
+
+**Domain events:**
+
+| Event | Fields | Publisher | Handler |
+|---|---|---|---|
+| `MonsterKilledEvent` | `playerId`, `monsterId`, `List<Item> loot`, `baseExp`, `jobExp` | `BattleService` | `BattleEventHandler.onMonsterKilled` |
+| `PlayerDiedEvent` | `playerId` | `BattleService` | `BattleEventHandler.onPlayerDied` |
+| `PlayerLeveledUpEvent` | `playerId`, `newBaseLevel`, `newJobLevel` | `BattleEventHandler` | — (logged) |
+
+### 9. Safety & Resilience (Null Safety)
+
+1. **Shielded Mapper:** `PlayerMapper` implements Safe Unboxing — `NULL` in numeric fields (XP, Points, Zenny) is converted to `0` before instantiating the Domain, preventing `NullPointerException`
+2. **Safe Drop Rate:** `MonsterMapper.mapDrop` treats `rate = null` as `0.0` — item never drops accidentally
+3. **Double WHERE EXISTS:** `monster_drops.sql` and `map_monsters.sql` use `WHERE EXISTS` to validate FKs before inserting, guaranteeing zero violations even with a partially populated database
 
 ---
 
-## 🗄 Banco de Dados
+## Database
 
 **URL:** `jdbc:postgresql://localhost:5432/ragnarok_db`
-**User:** `postgres` / **Password:** *(configure via variável de ambiente `DB_PASS`, padrão local: `postgre`)*
+**User:** `postgres` / **Password:** *(environment variable `DB_PASS`, local default: `postgre`)*
 
-| Tabela | Origem | Descrição |
+Schema is managed by **Flyway** (`db/migration/V1__initial_schema.sql`). Hibernate validates on startup.
+
+| Table | Source | Description |
 |---|---|---|
-| `monsters` | RathenaImporter (startup) | 2675 monstros do `db/re/mob_db.yml` |
-| `items` | RathenaImporter (startup) | Itens do `db/re/item_db_*.yml` |
-| `maps` | `maps.sql` | Todos os mapas do `db/map_index.txt` |
-| `map_portals` | `map_portals_v2.sql` | 1864 warps de `npc/re/warps/` |
-| `map_monsters` | `map_monsters.sql` | 2374 spawns de `npc/re/mobs/` |
-| `monster_drops` | `monster_drops.sql` | 12544 drops com rate real do rAthena |
-| `players` | MockMapLoader (startup) | Jogador inicial |
-| `player_items` | Gerado em combate | Inventário do jogador |
-| `skills` | SQL manual / seed | Catálogo de skills (aegis_name, name, type) |
-| `skill_tree` | SQL manual / seed | Árvore de skills por classe (job_class, skill_id, max_level, prereqs) |
-| `player_skills` | JPA ddl-auto | Skills aprendidas (player_id, skill_id, current_level) — auto-criada no startup |
-| `monster_spawns` | MockMapLoader (startup) | Legado — substituído por `map_monsters` |
+| `monsters` | RathenaImporter (startup) | 2675 monsters from `db/re/mob_db.yml` |
+| `items` | RathenaImporter (startup) | Items from `db/re/item_db_usable/equip/etc.yml` |
+| `maps` | `maps.sql` | All maps from `db/map_index.txt` |
+| `map_portals` | `map_portals_v2.sql` | 1864 warps from `npc/re/warps/` |
+| `map_monsters` | `map_monsters.sql` | 2374 spawns from `npc/re/mobs/` with weight (`amount`) |
+| `monster_drops` | `monster_drops.sql` | 12544 drops; `rate` at 0–100 scale (rAthena ÷ 100) |
+| `players` | PlayerSeedLoader (startup) | Initial player |
+| `player_items` | Generated in combat | Inventory (UUID PK, `is_equipped`, `amount`) |
+| `skills` | `skills.sql` + `forceLoad` | Catalog: `aegis_name`, `name`, `effect_type`, `damage_formula`, `sp_cost`, `duration_turns` |
+| `skill_tree` | `skill_tree.sql` | Tree by class: `job_class`, `skill_id`, `max_level`, `prereq_skill`, `prereq_level` |
+| `skill_buff_effects` | `skill_effects.sql` | Buff/passive effects per skill: `stat_type`, `value_formula` |
+| `player_skills` | JPA (test) / Flyway (prod) | Learned skills: `player_id`, `skill_id`, `current_level` |
+| `weapon_size_modifiers` | `weapon_size_modifiers.sql` | Damage modifiers: `weapon_type`, `small_pct`, `medium_pct`, `large_pct` |
 
-### Resetando dados do banco
-
-Para forçar reimportação com dados atualizados do rAthena:
+### Resetting database data
 
 ```sql
--- Reimportar itens (atualiza campo `script` com dados reais do rAthena):
+-- Re-import items (forces RathenaImporter on next startup):
 DELETE FROM items;
 
--- Reimportar skills (atualiza `script` — feito automaticamente a cada startup):
-DELETE FROM skills;
-```
+-- Skills are always updated via forceLoad — no manual DELETE needed.
 
-> Na próxima inicialização, `RathenaImporter` reimporta `items` automaticamente quando a tabela está vazia.
-> A tabela `skills` é sempre atualizada via `forceLoad` no startup — não precisa de `DELETE` manual.
-
-### Migrações automáticas
-
-**Nenhum script manual necessário.** O `StartupDataLoader` (@Order 3) popula todas as tabelas automaticamente no startup se estiverem vazias. O console exibirá o progresso:
-
-```
-🔄 Populando map_monsters    a partir de db/map_monsters.sql...
-✅ map_monsters    populada com 2374 registros.
-```
-
-> Os SQLs ficam em `src/main/resources/db/`. Os scripts Python em `scriptsPython/` são usados apenas para **regenerar** os SQLs quando os dados do rAthena mudam — após regen, copiar para `src/main/resources/db/`.
-
-### Reset completo do banco (respeitar ordem de FK)
-
-```sql
+-- Full reset (respect FK order):
 DELETE FROM monster_drops;
 DELETE FROM map_monsters;
-DELETE FROM monster_spawns;
 DELETE FROM monsters;
 DELETE FROM items;
 ```
 
+> On the next startup, `RathenaImporter` detects `itemRepo.count() == 0` and re-imports automatically. `StartupDataLoader` reloads all static SQLs.
+
+### Auto startup
+
+**No manual scripts required.** `StartupDataLoader` (`@Order(3)`) populates all static tables on boot if they are empty. The console shows progress:
+
+```
+Populating 'map_monsters' from db/map_monsters.sql...
+Table 'map_monsters' populated with 2374 rows.
+```
+
+> SQLs are in `src/main/resources/db/`. Python scripts in `scriptsPython/` are used **only to regenerate** the SQLs when rAthena data changes.
+
 ---
 
-## 🐍 Scripts Python (`scriptsPython/`)
+## Python Scripts (`scriptsPython/`)
 
-Pipeline ETL que extrai dados do rAthena e gera SQLs para o banco.
+ETL pipeline that extracts data directly from rAthena repositories via GitHub and generates the SQLs for the database.
 
-| Script | Função |
+| Script | Function |
 |---|---|
-| `Migrate.py` | Roda todos os SQLs no banco em ordem |
-| `map_parser.py` | Gera `maps.sql` do `db/map_index.txt` |
-| `warp_parser.py` | Gera `map_portals_v2.sql` de `npc/re/warps/` |
-| `mob_parser.py` | Gera `map_monsters.sql` de `npc/re/mobs/` |
-| `drop_parser.py` | Gera `monster_drops.sql` de `db/re/mob_db.yml` |
+| `Migrate.py` | Runs all SQLs in the correct order |
+| `map_parser.py` | Generates `maps.sql` from `db/map_index.txt` |
+| `warp_parser.py` | Generates `map_portals_v2.sql` from `npc/re/warps/` |
+| `mob_parser.py` | Generates `map_monsters.sql` from `npc/re/mobs/` |
+| `drop_parser.py` | Generates `monster_drops.sql` from `db/re/mob_db.yml`; normalizes rate: `rAthena_rate / 100.0` |
+| `skill_parser.py` | Generates `skill_tree.sql` from `db/re/skill_tree.txt` |
 
-**Dependências Python:**
+**Python dependencies:**
 ```bash
 pip install requests pyyaml psycopg2-binary --break-system-packages
 ```
 
 ---
 
-## 📂 Estrutura de Pastas Atual
+## Folder Structure
 
 ```text
 com.ragnarok
+├── api
+│   ├── GlobalExceptionHandler.java       # @RestControllerAdvice — maps exceptions to HTTP codes
+│   ├── controller
+│   │   ├── BattleController.java         # POST /api/battle/attack
+│   │   ├── ItemController.java           # GET/POST /api/players/{id}/inventory
+│   │   ├── MapController.java            # GET/POST /api/players/{id}/map
+│   │   ├── PlayerController.java         # GET/POST /api/players
+│   │   └── SkillController.java          # GET/POST /api/players/{id}/skills
+│   └── dto
+│       ├── request/                      # AttackRequestDTO, CreatePlayerRequestDTO, TravelRequestDTO, UseSkillRequestDTO
+│       └── response/                     # PlayerResponseDTO, BattleResponseDTO, SkillRowResponseDTO,
+│                                         # InventoryItemResponseDTO, MapInfoResponseDTO, WalkResponseDTO
+│
 ├── application
+│   ├── dto
+│   │   ├── SkillRowDTO.java              # Public record for skill display in the terminal
+│   │   └── WalkResult.java              # record: encounterOccurred, monsterId, message
 │   └── service
-│       ├── MonsterCatalogService.java
-│       ├── PlayerService.java
-│       ├── ItemService.java            # Gestão de Itens e Auto-Swap de equipamentos
-│       ├── BattleService.java
-│       ├── SkillService.java           # listarSkillsDoPlayer + aprenderSkill
-│       ├── SkillRowDTO.java            # Record público para exibição de skill no terminal
-│       └── ClassChangeService.java     # listarClassesDisponiveis + trocarClasse
+│       ├── BattleEventHandler.java       # @EventListener: loot persistence, XP, resurrection
+│       ├── BattleService.java            # Combat turn; publishes MonsterKilledEvent / PlayerDiedEvent
+│       ├── ClassChangeService.java       # Class progression
+│       ├── ItemService.java              # Inventory, equip, auto-swap
+│       ├── MapService.java               # Current map, portals, walk, travel
+│       ├── MonsterCatalogService.java    # Monster ETL via external API
+│       ├── PlayerService.java            # Character creation and management
+│       ├── ScriptInterpreter.java        # Formula engine: "ATK * skill_lv * 1.3"
+│       ├── SkillCombatService.java       # Skill usage in combat (HEAL, BUFF, DAMAGE)
+│       ├── SkillService.java             # Listing (class chain), learning, passive application
+│       └── WeaponSizeService.java        # Damage modifier: weapon_type × monster_size (@Cacheable)
 │
 ├── domain
-│   └── model
-│   │   ├── Monster.java
-│   │   ├── Player.java
-│   │   ├── Item.java
-│   │   ├── ItemStats.java              # Value Object
-│   │   ├── ItemType.java
-│   │   ├── EquipSlot.java
-│   │   ├── JobClass.java
+│   ├── event
+│   │   ├── MonsterKilledEvent.java       # record(playerId, monsterId, List<Item> loot, baseExp, jobExp)
+│   │   ├── PlayerDiedEvent.java          # record(playerId)
+│   │   └── PlayerLeveledUpEvent.java     # record(playerId, newBaseLevel, newJobLevel)
+│   ├── model
+│   │   ├── ActiveBuff.java              # Active buff (skill, stat, value, remaining turns)
 │   │   ├── BattleResult.java
+│   │   ├── BuffFlag.java
+│   │   ├── EffectResult.java            # Legacy script evaluation result
 │   │   ├── ElementalDamage.java
+│   │   ├── EquipSlot.java
+│   │   ├── Item.java
+│   │   ├── ItemDropInfo.java
+│   │   ├── ItemStats.java               # Equipment stats Value Object
+│   │   ├── ItemType.java
+│   │   ├── JobClass.java                # Full enum with tier, parentClass, and base stats
 │   │   ├── MainAttributes.java
 │   │   ├── MainStats.java
+│   │   ├── Monster.java
 │   │   ├── MonsterDrop.java
+│   │   ├── Player.java
 │   │   ├── PlayerItem.java
 │   │   ├── PlayerLocation.java
 │   │   ├── PlayerStats.java
-│   │   └── ItemDropInfo.java
+│   │   ├── SkillEffectType.java         # Enum: PHYSICAL_DAMAGE, MAGICAL_DAMAGE, BUFF, HEAL, PASSIVE
+│   │   ├── SkillElement.java            # Enum: NEUTRAL, FIRE, WATER, WIND, EARTH, HOLY, SHADOW...
+│   │   ├── StatType.java                # Enum: STR, AGI, VIT, INT, DEX, LUK, DEF, M_DEF, FLEE...
+│   │   └── WeaponType.java              # Enum: SWORD, DAGGER, SPEAR, BOW, STAFF, MACE, NONE...
 │   └── service
-│       ├── BattleEngine.java
-│       └── LevelingService.java        # Matemática de XP e Nível
+│       ├── BattleEngine.java            # Damage, loot RNG, modifiers — zero database dependency
+│       └── LevelingService.java         # XP curve, Level Up, rewards
 │
 └── infrastructure
     ├── client
     │   ├── RagnapiClient.java
     │   ├── dto
-    │   │   ├── MonsterDTO.java
-    │   │   └── ItemDTO.java
+    │   │   ├── ItemDTO.java
+    │   │   └── MonsterDTO.java           # Immutable record, String fields to tolerate dirty data
     │   └── mapper
-    │       ├── MonsterMapper.java
     │       ├── ItemMapper.java
-    │       └── PlayerMapper.java       # Safe Unboxing (NULL -> 0)
+    │       ├── MonsterMapper.java        # Sanitization + drop rate without division (DB already normalized)
+    │       └── PlayerMapper.java         # Safe Unboxing (NULL → 0)
     │
     └── persistence
-        ├── MonsterEntity.java
-        ├── MonsterRepository.java
-        ├── MonsterSpawnEntity.java     # Legado — substituído por MapMonsterEntity
-        ├── MonsterSpawnRepository.java # Legado
+        ├── GameMapEntity.java / Repository
+        ├── ItemEntity.java / Repository
+        ├── MapMonsterEntity.java / Repository     # Spawns with amount (weighted draw)
+        ├── MapPortalEntity.java / Repository
         ├── MonsterDropEntity.java
-        ├── GameMapEntity.java
-        ├── GameMapRepository.java
-        ├── MapPortalEntity.java
-        ├── MapPortalRepository.java
-        ├── MapMonsterEntity.java       # Spawns por mapa com amount (peso)
-        ├── MapMonsterRepository.java
-        ├── PlayerEntity.java
-        ├── PlayerRepository.java
-        ├── PlayerItemEntity.java       # UUID PK, flag is_equipped
-        ├── PlayerItemRepository.java
-        ├── ItemEntity.java
-        ├── ItemRepository.java
-        ├── SkillEntity.java            # Tabela 'skills'
-        ├── SkillRepository.java        # findByAegisName()
-        ├── SkillTreeEntity.java        # Tabela 'skill_tree' (read-only)
-        ├── SkillTreeRepository.java    # findByJobClassIgnoreCase()
-        ├── PlayerSkillEntity.java      # Tabela 'player_skills' (UUID PK)
-        ├── PlayerSkillRepository.java  # findByPlayerId(), findByPlayerIdAndSkillId()
+        ├── MonsterEntity.java / Repository
+        ├── PlayerEntity.java / Repository
+        ├── PlayerItemEntity.java / Repository     # UUID PK, is_equipped, amount
+        ├── PlayerSkillEntity.java / Repository
+        ├── SkillBuffEffectEntity.java / Repository  # stat_type + value_formula per skill
+        ├── SkillEntity.java / Repository
+        ├── SkillTreeEntity.java / Repository      # findByJobClassesIn (class chain)
+        ├── WeaponSizeModifierEntity.java / Repository
         └── mapper
+            ├── BuffSerializer.java                # JSON ↔ List<ActiveBuff>
             └── PlayerMapper.java
 ```
 
 ---
 
-## 🔄 Fluxos de Dados Implementados (Data Flows)
-
-### 1. "Monster Catalog" (ETL & Data Mining)
-Fluxo resiliente que carrega dados externos, sanitiza inconsistências e realiza mineração de dados relacionais.
-
-1. **Trigger:** `MonsterCatalogService.carregarESalvarMonstro(Long id)`.
-2. **Busca (Client):** `RagnapiClient` consome a API externa.
-    * *Input:* JSON "sujo" (ex: `"hp": "10,000"`, `"name": "scorpion"`).
-3. **Sanitização (Mapper):** `MonsterMapper.toDomain(dto)`.
-    * Remove formatação numérica (vírgulas).
-    * Normaliza Strings (Caixa alta/baixa).
-    * Garante Tipagem Forte (`String` -> `Integer`).
-4. **Domínio:** Instanciação do objeto `Monster` puro para cálculos seguros.
-5. **Persistência (Mapper):** `MonsterMapper.toEntity(domain)` aplica estratégia de **Flattening** (achata objetos aninhados em colunas planas).
-6. **Mineração Automática (Data Mining):**
-    * **Drops:** Identifica itens na lista de loot; se não existirem no banco, cria "Itens Placeholder" automaticamente.
-    * **Spawns:** Analisa a URL do mapa (ex: `.../moc_fild08.png`), extrai o ID técnico (`moc_fild08`) e popula tabelas de `maps` e `monster_spawns`.
-
-### 2. "Character Creation" (Factory & Persistence)
-1. **Trigger:** `PlayerService.criarNovoPersonagem(nome, classe)`.
-2. **Domínio:** Aplicação de regras de negócio (Nível 1, HP 100/100, Localização: Prontera).
-3. **Mapeamento:** `PlayerMapper` converte objetos de valor (`PlayerStats`, `PlayerLocation`) para colunas primitivas na tabela `players`.
-4. **Persistência:** Commit transacional no PostgreSQL.
-
-### 3. "Item Management" (Inventory & Equipment)
-1. **Gestão de Inventário (UUID):** Implementação robusta onde cada item possui um UUID único (`player_items`), permitindo múltiplas instâncias do mesmo item (ex: duas Katanas com refinos diferentes).
-2. **Lógica de Auto-Swap:** Ao equipar um item, o `ItemService`:
-    * Identifica o `EquipSlot` do novo item.
-    * Verifica se há item já equipado neste slot.
-    * Remove o antigo e equipa o novo em uma única transação atômica.
-3. **Persistência de Loot:**
-    * Tabela associativa `monster_drops` armazena a taxa de drop (`rate` 1-10000, onde 10000 = 100%).
-    * Arquitetura suporta *Eager Loading* para disponibilizar a tabela de loot imediatamente ao iniciar o combate.
-
-### 4. "Battle & Progression" (Engine & Leveling)
-Fluxo completo de combate, recompensa e evolução de personagem.
-
-1. **Trigger:** `BattleService.realizarAtaque(playerId, monsterId)`.
-2. **Combate (Engine):** `BattleEngine` calcula dano físico (`(STR*2 + WeaponATK) - EnemyDEF`) e define o vencedor do turno.
-3. **Counter-ataque:** Monstro responde no mesmo turno; dano e HP atual do jogador exibidos no terminal.
-4. **Loot (RNG):** Se o monstro morre, a engine rola os dados de drop baseada nas taxas reais do rAthena. Itens ganhos são salvos na tabela `player_items`.
-5. **Processamento de XP (LevelingService):**
-    * **Extração:** Captura `baseExp` e `jobExp` do monstro.
-    * **Cálculo:** `LevelingService` verifica a curva de experiência (`Level * 100`).
-    * **Level Up:** Se a XP exceder o necessário:
-        * Incrementa Nível Base/Job.
-        * Adiciona **Pontos de Atributo** (+5) e **Skill Points** (+1).
-        * Executa **Full Heal** (Recupera HP/SP máximos).
-    * **Persistência:** Atualiza a entidade `PlayerEntity` com os novos saldos.
-
-### 5. "World Navigation" (Map & Portals)
-1. **Trigger:** Jogador seleciona "Portais" no menu de exploração.
-2. **Consulta:** `MapPortalRepository.findDestinosByMapFrom(mapaAtual)` retorna destinos disponíveis.
-3. **Viagem:** `PlayerEntity.mapName` é atualizado e persistido no banco.
-4. **Encontro:** `MapMonsterRepository.findByMapId(mapaAtual)` retorna spawns do mapa. Sorteio ponderado pelo `amount`.
-5. **Morte:** Player revive em `prontera`, `mapName` resetado.
-
-### 6. "Skills System" (Aprendizado e Pré-requisitos)
-1. **Trigger:** Jogador abre o menu de Status → digita `S`.
-2. **Listagem:** `SkillService.listarSkillsDoPlayer(playerId)` busca a `skill_tree` da classe do player e resolve pré-requisitos com AND-logic. Retorna lista de `SkillRowDTO`.
-3. **Exibição:** Terminal mostra status `[DISPONIVEL]`, `[BLOQUEADA: motivo]`, `[APRENDIDA]` ou `[MAX]` para cada skill.
-4. **Aprendizado:** Jogador digita o número da skill → `SkillService.aprenderSkill(playerId, aegisName)` valida classe, pré-requisitos, nível máximo e `skillPoints`. Se válido, faz upsert em `player_skills` e decrementa `skillPoints` do player.
-5. **Erros:** Violações lançam `IllegalStateException` capturada pelo terminal e exibida ao jogador.
-
-### 7. "Safety & Resilience" (Null Safety)
-Camada de proteção contra inconsistências de dados legados ou falhas de banco.
-
-1. **Mapper Blindado:** `PlayerMapper` implementa *Safe Unboxing*.
-    * Se o banco retornar `NULL` para campos numéricos (XP, Pontos, Zenny), o Mapper injeta `0` no Domínio.
-    * Previne `NullPointerException` em tempo de execução durante cálculos matemáticos.
-2. **Sanitização no Boot:** O `MockMapLoader` verifica e corrige registros corrompidos (campos nulos) ao inicializar a aplicação.
-
----
-
-## 📝 Dicionário de Classes Chaves
+## Key Classes
 
 ### Domain Models
 
-* **Monster:** Modelo rico do domínio.
-    * *Evolução:* Agora expõe `baseExp` e `jobExp` para o cálculo de recompensas.
-    * Possui atributos aninhados (`MainStats`) e tipos fortes.
-* **Player:** Modelo rico do usuário.
-    * *Evolução:* Contém lógica de inventário e gestão de progresso (`statPoints`, `skillPoints`, `xp`), além de `mapName` para localização no mundo.
-* **Item:** Modelo puro representando itens e equipamentos. Possui `ItemStats` (Value Object).
-* **MonsterDrop:** Objeto de domínio que associa um `Item` a uma chance de drop (`Double rate`).
+| Class | Description |
+|---|---|
+| `Monster` | Rich model with `MainStats`, `ElementalDamage`, list of `MonsterDrop` |
+| `Player` | Rich model with inventory, `statPoints`, `skillPoints`, `xp`, `mapName`, `activeBuffs` |
+| `Item` | Pure model with `ItemStats` (Value Object) and `WeaponType` |
+| `MonsterDrop` | Associates `Item` with `rate` (Double, 0–100 scale) |
+| `ActiveBuff` | Active buff: source skill, `StatType`, value, and `durationTurns` (-1 = permanent) |
+| `JobClass` | Enum with all jobs (Tier 0–4), `parentClass` for progression chain, and base stats per class |
 
-### Domain Services (Regras de Negócio Puras)
+### Domain Events
 
-* **BattleEngine:** Realiza cálculos matemáticos de dano físico e sorteio de loot (RNG). Não depende de banco de dados.
-* **LevelingService:** Responsável pela matemática de progressão.
-    * Define a curva de experiência (`Nível * 100`).
-    * Processa o Level Up (Base e Job).
-    * Gerencia recompensas (Cura total, pontos de atributo e skill).
+| Event | Description |
+|---|---|
+| `MonsterKilledEvent` | Published by `BattleService` when monster HP reaches 0; carries loot list, baseExp, jobExp |
+| `PlayerDiedEvent` | Published by `BattleService` when player HP reaches 0; triggers resurrection in `BattleEventHandler` |
+| `PlayerLeveledUpEvent` | Published by `BattleEventHandler` when base or job level increases |
 
-### Infrastructure DTOs
+### Domain Services
 
-* **MonsterDTO:** Registro (Record) imutável desenhado para falhar o menos possível. Quase todos os campos são `String` para tolerar dados sujos da API.
+| Class | Description |
+|---|---|
+| `BattleEngine` | Damage formula `(STR*2 + WeaponATK) - DEF`, loot RNG `nextDouble(0,100) < rate`, elemental modifier, size modifier |
+| `LevelingService` | Curve `Level * 100`, Base and Job Level Up, Full Heal, stat/skill points distribution, caps per `JobClass` |
 
-### Infrastructure Entities (Persistence)
+### Infrastructure Entities
 
-* **MonsterEntity:** Entidade JPA mapeada na tabela `monsters`.
-    * *Estratégia:* **Flattening**. "Achata" objetos complexos em colunas simples (ex: `stats.hp` vira `hp`).
-* **PlayerEntity:** Entidade JPA mapeada na tabela `players`.
-    * *Colunas:* `base_exp`, `job_exp`, `stat_points`, `skill_points`, `map_name`.
-    * Também utiliza Flattening para atributos de batalha e localização.
-* **GameMapEntity:** Tabela `maps`.
-    * *Diferencial:* O ID é o nome técnico do mapa (ex: `moc_fild08`) para facilitar a leitura e unicidade.
-* **MapPortalEntity:** Tabela `map_portals`.
-    * *Função:* Armazena os 1864 warps reais do rAthena com coordenadas de origem e destino.
-* **MapMonsterEntity:** Tabela `map_monsters`.
-    * *Função:* Associa monstros a mapas com `amount` (peso de spawn). Substitui `MonsterSpawnEntity` para dados reais do rAthena.
-* **MonsterSpawnEntity:** Tabela `monster_spawns`. **Legado** — substituído por `MapMonsterEntity`.
-    * *Função original:* Resolve o relacionamento Muitos-para-Muitos (Monstros <-> Mapas), controlando quantidade e respawn.
-* **MonsterDropEntity:** Tabela `monster_drops`. Tabela associativa que liga Monstros e Itens com taxa de chance real do rAthena (1-10000).
-* **PlayerItemEntity:** Tabela `player_items`. Representa o inventário, contendo UUID próprio, referência ao Item, refino e flag `is_equipped`.
-* **SkillEntity:** Tabela `skills`. Catálogo de skills com `aegisName`, `name` e `type`.
-* **SkillTreeEntity:** Tabela `skill_tree`. Read-only. Cada linha representa uma skill disponível para uma classe, com `maxLevel`, `prereqSkill` e `prereqLevel`. Uma skill pode ter múltiplas linhas (um pré-requisito por linha).
-* **PlayerSkillEntity:** Tabela `player_skills`. Criada automaticamente via JPA. Armazena o nível atual de cada skill aprendida pelo player (UUID PK, unique constraint em `player_id + skill_id`).
-
-### Mappers (Camada de Tradução e Segurança)
-
-* **MonsterMapper:** Crítico para resiliência. Contém lógica de `try-catch` e sanitização de dados externos.
-* **PlayerMapper:** **[Blindado]** Focado em estruturar objetos complexos em tabela plana.
-    * *Feature:* Implementa **Safe Unboxing**. Se o banco retornar `NULL` para campos numéricos críticos (XP, Pontos), o Mapper converte automaticamente para `0` antes de instanciar o Domínio, prevenindo `NullPointerException` na lógica de negócio.
+| Entity | Details |
+|---|---|
+| `PlayerEntity` | Flattening: `base_exp`, `job_exp`, `stat_points`, `skill_points`, `map_name`, `active_buffs_json` |
+| `MonsterDropEntity` | `rate` as `DOUBLE PRECISION` at 0–100 scale; FK to `monsters` and `items` |
+| `SkillTreeEntity` | Read-only; multiple rows per skill = multiple prerequisites |
+| `SkillBuffEffectEntity` | `skill_id` + `stat_type` + `value_formula` — evaluated at runtime by `ScriptInterpreter` |
+| `WeaponSizeModifierEntity` | `weapon_type` + `small_pct` + `medium_pct` + `large_pct` |
+| `PlayerItemEntity` | UUID PK, allows multiple instances of the same item (e.g., two katanas with different refine levels) |
+| `MapMonsterEntity` | `map_id` + `monster_id` + `amount` — weighted draw by `amount` |
 
 ---
 
-## ✅ Cobertura de Testes (Integration Status)
+## Test Coverage
 
-O projeto mantém uma bateria de testes de integração focados nos fluxos críticos do RPG:
+**240 tests — 0 failures — BUILD SUCCESS**
 
-### 🟢 Core & ETL
-* **MonsterCatalogServiceTest:** Valida o fluxo completo API Externa -> Sanitização -> Persistência -> Mineração de Spawns/Drops.
-* **PlayerServiceTest:** Valida a Factory de personagens, garantindo status iniciais e persistência correta (Flattening).
-* **ItemServiceTest:** Valida a persistência de itens e a integridade dos dados "achatados" no banco.
+> Run with Java 17: `JAVA_HOME=/path/to/jdk-17 ./mvnw test`
+> (Java 21+ breaks Mockito inline-mock-maker without additional `--add-opens` configuration)
+>
+> **Integration tests require Docker Desktop running** — Testcontainers starts a PostgreSQL container automatically.
 
-### 🟢 Gameplay & Mechanics
-* **BattleIntegrationTest:** Valida a matemática de dano físico (`(STR*2 + Weapon) - DEF`).
-* **BattleLootIntegrationTest:** Valida a tabela de drop (RNG) e o salvamento do item na mochila.
-* **LevelingIntegrationTest:** Valida a curva de experiência, o reset de XP excedente e a entrega de recompensas (Pontos e Full Heal).
-* **PlayerInventoryTest:** Valida a lógica de `Equip`/`Unequip` e a troca automática de slots (Auto-Swap).
-* **SkillServiceIntegrationTest:** Valida `listarSkillsDoPlayer` — lista não vazia para Novice, marcação de skills disponíveis com skillPoints > 0.
-* **SkillServiceAprenderTest:** Valida `aprenderSkill` — incremento de nível, decremento de skillPoints, `IllegalStateException` sem pontos ou em nível máximo.
-* **ClassChangeIntegrationTest:** Valida troca de classe no banco real — `trocarClasse` persiste `jobClass/jobLevel/jobExp`, `listarClassesDisponiveis` retorna tier-1 para NOVICE.
+### Unit Tests
 
-### 🟢 Unit Tests (Mockito)
-* **BattleEngineTest:** 17 cenários cobrindo fórmula de dano, dano mínimo 1, DEF=0, loot 100%/0%, counter-attack e null guards.
-* **BattleServiceTest:** 8 cenários — ataque normal, morte do monstro (VITÓRIA), contra-ataque, morte do jogador (FATAL), player/monster not found, player já morto.
-* **ClassChangeServiceTest:** Cenários de `listarClassesDisponiveis` e `trocarClasse` com mocks de repositórios.
-* **RagnarokTerminalRunnerTest:** Valida ressurreição automática do jogador ao receber `FATAL` do BattleService.
+| Class | Tests | Coverage |
+|---|---|---|
+| `BattleEngineTest` | 20 | Damage formula, minimum damage 1, DEF=0, 100%/0%/50% loot, counter-attack, rate scale, null guards |
+| `LevelingServiceTest` | 7 | XP curve, Level Up, excess XP reset, Full Heal, stat/skill points |
+| `PlayerTest` | 38 | Inventory, getTotalDef, getWeaponAtk, activeBuffs, equipment |
+| `ActiveBuffTest` | 4 | Construction, expiration, permanent (`durationTurns = -1`) |
+| `MonsterMapperTest` | 9 | Rate 100/70/0.35/0.0/null, non-null item, invariant ≤100, empty/null drops |
+| `ScriptInterpreterTest` | 16 | Arithmetic formulas, stat variables, edge cases |
+| `WeaponSizeServiceTest` | 6 | Modifiers by weapon type and monster size |
+| `ClassChangeServiceTest` | 14 | `listarClassesDisponiveis`, `trocarClasse` with repository mocks |
+| `BattleServiceTest` | 10 | Normal attack, death (VICTORY), counter-attack, player death (FATAL), null guards |
+| `BattleServiceLoggingTest` | 2 | WARN on dead-player attack, INFO on monster kill — Logback `ListAppender` |
+| `BattleEventHandlerTest` | 4 | Loot persistence, XP fields, level-up event publication, player resurrection |
+| `SkillCombatServiceTest` | 9 | Skill not found, not learned, insufficient SP, passive, HEAL, BUFF with duration, BUFF without effects, PHYSICAL_DAMAGE with/without target |
+| `PlayerControllerTest` | — | REST: list, get by id, create player |
+| `BattleControllerTest` | — | REST: attack, dead player 400, player/monster not found 404 |
+| `SkillControllerTest` | — | REST: list skills, learn, use |
+| `ItemControllerTest` | — | REST: list inventory, use item |
+| `MapControllerTest` | — | REST: current map, portals, walk, travel |
+| `GlobalExceptionHandlerTest` | — | HTTP 400 / 404 / 500 mapping for all domain exceptions |
+| `CacheVerificationTest` | 2 | `@SpyBean` verifies `findByWeaponType` called exactly once in two consecutive hits |
+| `ClassChangeLoggingTest` | 2 | Log messages for class change |
+| `ParserLoggingTest` | 4 | Log output from rAthena YAML parsers |
 
----
+### Integration Tests (Testcontainers — require Docker)
 
-## 🚀 Roadmap & Backlog
-
-### ✅ Concluído
-* **Menu de Distribuição de Stats:** Terminal permite gastar `statPoints` nos 6 atributos base.
-* **Sistema de Skills:** `skill_tree`/`player_skills`, SkillService com listagem e aprendizado, menu terminal via `S`.
-* **Sistema de Troca de Classe:** `ClassChangeService`, progressão NOVICE→tier1→tier2, menu terminal via `C` no status.
-* **Startup automático:** `StartupDataLoader` popula todas as tabelas na inicialização — zero scripts manuais.
-* **LevelingService:** Caps de nível base/job por classe.
-* **Limpeza de tela no terminal:** `clearScreen()` com ANSI codes entre cada menu — sem scroll infinito.
-* **Inventário empilha corretamente:** Drop de item existente incrementa `amount` no mesmo slot.
-* **Stat/skill points acumulam em multi-levelup:** `PlayerMapper.toDomain` agora mapeia `statPoints` e `skillPoints` do banco antes de aplicar os ganhos do level up.
-
----
-
-### 🐛 Bugs Conhecidos
-
-Nenhum bug conhecido no momento.
-
----
-
-### 🎮 Funcionalidades Faltando (Backlog)
-
-#### Alta Prioridade
-1. **Usar itens em batalha** — menu de combate só tem "Atacar" e "Fugir". Adicionar opção "Item" para usar consumíveis do inventário durante o combate.
-2. **Usar skills em batalha** — integrar skills aprendidas na `BattleEngine`. Dano mágico (INT), habilidades especiais com custo de SP.
-3. **Itens de retorno (Butterfly Wing / Fly Wing)** — implementar mecânica de teleporte: Butterfly Wing → Prontera, Fly Wing → ponto aleatório do mapa atual.
-4. **Mecânicas dos stats faltantes:**
-   - **AGI** → FLEE (evasão de ataques) e ASPD (velocidade de ataque)
-   - **DEX** → HIT (precisão) e redução de cast time de magias
-   - **LUK** → taxa de crítico e bônus de drop rate
-
-#### Média Prioridade
-5. **Enciclopédia de mapas** — menu informativo mostrando: mapas vizinhos acessíveis, monstros do mapa atual com taxa de spawn, drops de cada monstro com raridade.
-6. **Sistema de lojas NPC** — compra e venda de itens com Zenny em cidades específicas (Prontera, Morroc, etc.).
-7. **Troca de classe restrita a NPCs** — atualmente disponível em qualquer lugar. Deveria ser permitida apenas em cidades/NPCs específicos (ex: Prontera para tier 1, locais específicos para tier 2).
-
-#### Experiência / UX
-8. **Dano mágico testável** — INT não tem mecânica visível ainda. Implementar e documentar a fórmula.
-
-#### Futuro
-* **Persistência de posição (X,Y)** — salvar coordenadas ao sair, não apenas o mapa.
-* **Conexões de borda entre mapas** — campos conectados por borda geográfica (sem NPC warp) ausentes do `map_portals`.
-* **Multiplayer (WebSockets)** — (Longo Prazo).
+| Class | Tests | Coverage |
+|---|---|---|
+| `BattleIntegrationTest` | 2 | Physical damage and counter-attack on real database |
+| `BattleLootIntegrationTest` | 1 | Drop RNG, inventory persistence, victory message includes drop names |
+| `SkillServiceIntegrationTest` | 10 | Listing, available skills, HEAL, BUFF, insufficient SP, PASSIVE, PHYSICAL_DAMAGE, BUFF without effects |
+| `SkillServiceAprenderTest` | 7 | Level increment, skillPoints decrement, max level, non-existent skill, null jobClass |
+| `ClassChangeIntegrationTest` | 2 | `trocarClasse` persists `jobClass/jobLevel/jobExp`; listing for NOVICE |
+| `ItemServiceIntegrationTest` | 15 | Inventory CRUD, equip/unequip, auto slot-swap |
+| `StartupDataLoaderSqlTest` | 9 | `monster_drops.sql` and `map_monsters.sql`: FK safety, idempotency, WHERE EXISTS |
+| `PlayerInventoryIntegrationTest` | 2 | Equip and unequip on real database |
+| `InventoryDebugTest` | 3 | Inventory integrity |
+| `MapSpawnIntegrationTest` | 1 | MapMonster persistence and retrieval by map ID |
+| `MonsterDropIntegrationTest` | 1 | Drop reading from database |
+| `RagnarokTerminalRunnerTest` | 11 | Auto-resurrection, exploration flows |
+| `MonsterCatalogServiceTest` | 1 | Full ETL API → database |
+| `ItemLoadingTest` | 1 | Item loading |
+| `RagnarokCoreApplicationTests` | 1 | Spring context loads successfully |
 
 ---
 
-## ⚙️ Build & Run
+## Roadmap
+
+### Completed
+
+- **Class Chain for Skills:** LORD_KNIGHT sees and learns Knight and Swordsman skills
+- **Skill Effects:** Buffs with `stat_type` + `value_formula`, permanent passives, formula-based damage
+- **Size Modifiers:** `WeaponSizeService` + `weapon_size_modifiers` table
+- **Formula Engine:** `ScriptInterpreter` evaluates mathematical expressions with stat variables at runtime
+- **Effect Messages:** Using a skill shows concrete effects: `[DEF +2, M_DEF +4]`
+- **Fix Drop Rate:** Scale normalized to 0–100 during SQL ingestion (`rAthena ÷ 100`)
+- **Stat Distribution Menu:** Terminal allows spending `statPoints` on 6 attributes
+- **Complete Skills System:** `skill_tree`/`player_skills`, listing, prerequisites, learning
+- **Class Change:** `ClassChangeService`, progression NOVICE→Tier1→Tier2, menu via `C`
+- **Auto Startup:** `StartupDataLoader` — zero manual scripts
+- **Screen Clear:** `clearScreen()` with ANSI codes between menus
+- **Inventory Stacks Correctly:** Dropping an existing item increments `amount`
+- **Stat/skill points accumulate in multi-level-up**
+- **LevelingService:** Base/job level caps per class via `JobClass.maxJobLevel()`
+- **Schema Migration:** Flyway V1 migration, `ddl-auto=validate`
+- **Resilience4j:** `@Retry` (3 attempts, 2 s exponential backoff) + `@CircuitBreaker` on `RathenaDownloadService`; fallback logs WARN and skips import
+- **Testcontainers:** `AbstractIntegrationTest` (Singleton Container Pattern) — all integration tests use an ephemeral `postgres:16` container; no local DB required for `./mvnw test`
+- **Spring Cache (Caffeine):** `@EnableCaching` + `CacheConfig` with 4 named caches; `@Cacheable` / `@CacheEvict` on `WeaponSizeService`, `SkillService`, `SkillTreeRepository`, `SkillBuffEffectRepository`
+- **REST API + Swagger UI:** 5 controllers (Players, Battle, Skills, Inventory, Map), `GlobalExceptionHandler`, springdoc-openapi — full game loop playable at `http://localhost:8080/swagger-ui.html`
+- **Spring Events:** `BattleService` decoupled via `MonsterKilledEvent` / `PlayerDiedEvent`; `BattleEventHandler` owns loot persistence, XP processing, and player resurrection
+
+### Backlog
+
+#### High Priority
+
+1. **Use skills in battle (terminal)** — `usarSkillEmCombate` exists in `SkillCombatService`; integrate into combat menu with skill selection and target
+2. **Use items in battle** — add "Item" option to combat menu for consumables in inventory
+3. **Missing stat mechanics:**
+   - **AGI** → FLEE (evasion) and ASPD (attack speed)
+   - **DEX** → HIT (accuracy) and cast time reduction
+   - **LUK** → critical rate and drop rate bonus
+4. **Butterfly Wing / Fly Wing** — teleport to Prontera / random map point
+
+#### Medium Priority
+
+5. **Map encyclopedia** — neighboring maps, map monsters, drops with rarity
+6. **NPC shop system** — buy/sell with Zenny in cities
+7. **Class change restricted to NPCs** — allow only at specific locations
+
+#### Future
+
+- **Position persistence (X,Y)** — save coordinates on exit
+- **Edge connections between maps** — geographically connected fields without NPC warp
+- **Multiplayer (WebSockets)** — long term
+
+---
+
+## Build & Run
 
 ```bash
 # Build
 ./mvnw clean install
 
-# Rodar aplicação
-./mvnw spring-boot:run
+# Run the application (interactive terminal — requires direct JVM stdin)
+java -jar target/ragnarok-core-0.0.1-SNAPSHOT.jar
 
-# Rodar todos os testes
-./mvnw test
+# Run all tests — requires Docker Desktop running (Testcontainers)
+JAVA_HOME=/path/to/jdk-17 ./mvnw test
 
-# Rodar teste específico
-./mvnw test -Dtest=BattleIntegrationTest
+# Run only unit tests (no Docker needed)
+JAVA_HOME=/path/to/jdk-17 ./mvnw test -Djacoco.skip=true \
+  -Dtest="BattleServiceTest,BattleEventHandlerTest,BattleServiceLoggingTest,\
+RagnarokTerminalRunnerTest,GlobalExceptionHandlerTest,PlayerControllerTest,\
+BattleControllerTest,SkillControllerTest,ItemControllerTest,MapControllerTest,\
+WeaponSizeServiceTest,SkillCombatServiceTest,ItemServiceTest,ClassChangeServiceTest,\
+CacheVerificationTest"
+
+# Run a specific test
+./mvnw test -Dtest=BattleEngineTest
+```
+
+**Prerequisites:**
+- Java 17+
+- PostgreSQL running on `localhost:5432` with database `ragnarok_db` (for the application)
+- **Docker Desktop** (for `./mvnw test` — Testcontainers starts a `postgres:16` container automatically)
+- Environment variable `DB_PASS` with the PostgreSQL password (local default: `postgre`)
+
+> On the first startup, `RathenaImporter` downloads data from rAthena via GitHub (~2675 monsters + all items). `StartupDataLoader` populates the rest. The application is ready in ~30–60 seconds depending on connection speed.
+
+### REST API / Swagger UI
+
+Once the application is running, open **`http://localhost:8080/swagger-ui.html`** to play via browser without cloning the repo.
+
+Recommended flow:
+```
+1. POST /api/players          — {"name":"Hero","jobClass":"NOVICE"}  → note the returned "id"
+2. GET  /api/players/{id}     — verify HP, level, zenny
+3. POST /api/players/{id}/map/walk  → if encounterOccurred=true, note monsterId
+4. POST /api/battle/attack    — {"playerId":1,"monsterId":1002}  → repeat until VITÓRIA
+5. GET  /api/players/{id}/inventory — verify dropped items
+6. GET  /api/players/{id}/skills    — list learnable skills
+7. POST /api/players/{id}/skills/NV_BASIC/learn
+8. POST /api/players/{id}/map/travel — {"destination":"izlude"}
 ```
